@@ -52,6 +52,7 @@ Dist::Zilla::Plugin::MetaProvides::Package = 1.15000002
 Dist::Zilla::Plugin::MetaConfig = 0
 Dist::Zilla::Plugin::Keywords = 0.004
 Dist::Zilla::Plugin::Git::Contributors = 0.004
+Dist::Zilla::Plugin::StaticInstall = 0.005
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::MinimumPerl = 1.006
@@ -95,7 +96,7 @@ Pod::Elemental::PerlMunger = 0.200001
 -relationship = requires
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0.012
-Dist::Zilla::Plugin::ModuleBuildTiny = 0.009
+Dist::Zilla::Plugin::ModuleBuildTiny = 0.012
 Dist::Zilla::Plugin::ModuleBuildTiny::Fallback = 0.018
 Dist::Zilla::Plugin::GithubMeta = 0.54
 Dist::Zilla::Plugin::GitHub::Update = 0.40
@@ -106,7 +107,7 @@ Dist::Zilla::Plugin::GitHub::Update = 0.40
 Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::MakeMaker::Awesome = 0.13
 Dist::Zilla::Plugin::MakeMaker::Fallback = 0.012
-Dist::Zilla::Plugin::ModuleBuildTiny = 0.009
+Dist::Zilla::Plugin::ModuleBuildTiny = 0.012
 Dist::Zilla::Plugin::ModuleBuildTiny::Fallback = 0.018
 Dist::Zilla::Plugin::GithubMeta = 0.54
 Dist::Zilla::Plugin::GitHub::Update = 0.40
